--- a/main.css
+++ b/main.css
@@ -43,7 +43,7 @@ header ul {
    align-items:center;
    list-style: none;
    padding-left: 200px;
-   padding-right: 250px;
+   padding-right: 200px;
    font-size: 1.5em;
 }
 
@@ -57,19 +57,47 @@ input:hover, label:hover {
 }
 
 /* styling for javascript/jquery pages */
-.js-quiz {
+.divbody {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 50%;
-    min-height: 500px;
+    min-width: 80%;	
+}
+
+.sectionslider {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    min-height: 200px;
     padding: 30px 30px;
     background-color: #EDF8F5;
     border-radius: 10px;
     box-shadow: 10px 10px 8px #6a4485;
-
 }
+.sectiontext {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    min-height: 50%;
+    padding: 30px 30px;
+    background-color: #EDF8F5;
+    border-radius: 10px;
+    box-shadow: 10px 10px 8px #6a4485;
+}
+
+.divslider {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0;
+    width: 100%;
+}
+
 .js-quiz-form {
     font-size: 1.3em;
 }
@@ -149,6 +177,97 @@ width: 40%;
 
 }
 
+/// Height of the slider's handle
+/// @type String
+$control-height: 40px;
+/// Width of the slider's handle
+/// @type String
+$control-width: 80px;
+/// Color of the slider's handle
+/// @type Color
+$control-color: rgb(94,55,142);
+/// Size of the slider handle's text
+/// @type String
+$control-font-size: 18px;
+/// Font Weight of the slider handle's text
+/// @type String
+$control-font-weight: 100;
+/// Color of the slider's "fill" when connected
+/// @type Color
+$fill-color: darken($control-color, 10%);
+/// Height of the slider's gutter
+/// @type String
+$gutter-height: 16px;
+
+
+/// noUiSlider Gutter
+.noUi-background {
+  height: $gutter-height;
+  &.noUi-vertical {
+    height: 200px;
+    width: $gutter-height;
+    margin: 0 auto 30px;
+  }
+}
+.noUi-base {
+  
+  .noUi-connect {
+    background-color: $fill-color;
+  }
+  /// noUiSlider Handle
+  .noUi-handle {
+    background-color: $control-color;
+    border: none;
+    border-radius: 6px;
+    box-shadow: none;
+    color: #FFFFFF;
+    display: table;
+    font-size: 15px;
+    height: $control-height;
+    left: 0;
+    margin-left: -22px;
+    margin-top: -($control-height/2) + $gutter-height/2 - 1;
+    padding: 0;
+    position: absolute;
+    text-align: center;
+    top: 0;
+    width: $control-width;
+    z-index: 2;
+    
+    .noUi-horizontal & {
+      cursor: ew-resize;
+    }
+    
+    .noUi-vertical & {
+      cursor: ns-resize;
+      margin-left: -($control-width/2) + $gutter-height/2;
+    }
+    
+    &:hover {
+      background-color: lighten($control-color, 10%);
+    }
+    
+    &.noUi-active {
+      background-color: darken($control-color, 10%);
+      z-index: 3;
+    }
+
+    &::before {
+      background: transparent;
+      content: attr(data-value);
+      display: table-cell;
+      font-size: $control-font-size;
+      font-weight: $control-font-weight;
+      position: static;
+      width: 100%;
+      vertical-align: middle;
+    }
+    &::after {
+      display: none;
+    }
+  }
+}
+
 .showcase__mark {
 	display: block;
 	position: absolute;
@@ -159,4 +278,10 @@ width: 40%;
 	border-radius: 4px;
 	color: #fff;
 	margin-left: -10px;
+}
+
+#sliderAns.noUi-state-tap .noUi-connect,
+#sliderAns.noUi-state-tap .noUi-origin {
+    -webkit-transition: transform 1600ms;
+    transition: transform 1600ms;
 }
